add filter for project commission module

--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -41,7 +41,7 @@
          url="http://localhost:8080/ws/employee/v1/employees"
          ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
          idField="id" sizeList="[5,10,20,50]" pageSize="10" allowCellEdit="true" allowCellSelect="true"
-         multiSelect="true" showSummaryRow="true" showFilterRow="true">
+         showFilterRow="true">
         <div property="columns">
             <div type="indexcolumn"></div>
             <div field="name" width="120" headerAlign="center" allowSort="true">姓名
