--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -24,6 +24,7 @@
         <tr>
             <td style="width:100%;">
                 <a class="mini-button" iconCls="icon-save" plain="true" onclick="saveData()">保存</a>
+                <a class="mini-button" iconCls="icon-upload" plain="true" onclick="ExportExcel()">导出Excel</a>
             </td>
         </tr>
     </table>
@@ -39,52 +40,52 @@
          showFilterRow="true">
         <div property="columns">
             <div type="indexcolumn"></div>
-            <div field="designer" width="100" headerAlign="center" allowSort="false">designer
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
-                <input id="designerFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="100"
+            <div field="designer" width="70" headerAlign="center" allowSort="false">designer
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="70"/>
+                <input id="designerFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="70"
                        onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="designerAssistant" width="100" headerAlign="center" allowSort="false">designerAssistant
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="designerAssistant" width="70" headerAlign="center" allowSort="false">designerAssistant
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="70"/>
             </div>
-            <div field="acNumber" width="100" headerAlign="center" allowSort="false">acNumber
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="acNumber" width="50" headerAlign="center" allowSort="false">acNumber
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="customerName" width="100" headerAlign="center" allowSort="false">customerName
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="customerName" width="70" headerAlign="center" allowSort="false">customerName
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="70"/>
             </div>
-            <div field="contractTotal" width="100" headerAlign="center" allowSort="false">contractTotal
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="contractTotal" width="50" headerAlign="center" allowSort="false">contractTotal
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="purchaseAgentFee" width="100" headerAlign="center" allowSort="false">purchaseAgentFee
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="purchaseAgentFee" width="50" headerAlign="center" allowSort="false">purchaseAgentFee
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="projectChangeTotal" width="100" headerAlign="center" allowSort="false">projectChangeTotal
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="projectChangeTotal" width="50" headerAlign="center" allowSort="false">projectChangeTotal
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="customerPay" width="100" headerAlign="center" allowSort="false">customerPay
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="customerPay" width="50" headerAlign="center" allowSort="false">customerPay
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="payContractRatio" width="100" headerAlign="center" allowSort="false">payContractRatio
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="payContractRatio" width="50" headerAlign="center" allowSort="false">payContractRatio
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="payProjectRatio" width="100" headerAlign="center" allowSort="false">payProjectRatio
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="payProjectRatio" width="50" headerAlign="center" allowSort="false">payProjectRatio
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="contractState" width="100" type="comboboxcolumn" headerAlign="center" allowSort="false">
+            <div field="contractState" width="70" type="comboboxcolumn" headerAlign="center" allowSort="false">
                 contractState
-                <input property="editor" disable="true" class="mini-combobox" style="width:100%;" textField="text"
-                       valueField="value"
+                <input property="editor" disable="true" class="mini-combobox asLabel"
+                       style="width:100%;" textField="text" valueField="value"
                        url="http://localhost:8080/ws/commission/v1/states?type=CONTRACT"
                        ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
-                       allowInput="true" showNullItem="true"/>
+                       allowInput="true" showNullItem="true" readonly="true"/>
                 <input id="contractStateFilter" property="filter" class="mini-combobox" style="width:100%;"
                        textField="text" valueField="value"
                        url="http://localhost:8080/ws/commission/v1/states?type=CONTRACT"
                        ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
                        allowInput="true" showNullItem="true" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="commissionState" width="100" type="comboboxcolumn" headerAlign="center" allowSort="false">
+            <div field="commissionState" width="70" type="comboboxcolumn" headerAlign="center" allowSort="false">
                 commissionState
                 <input property="editor" disable="true" class="mini-combobox" style="width:100%;" textField="text"
                        valueField="value"
@@ -97,65 +98,77 @@
                        ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
                        allowInput="true" showNullItem="true" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="designCommissionRate" width="100" headerAlign="center" allowSort="false">designCommissionRate
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            <div field="designCommissionRate" width="50" headerAlign="center" allowSort="false">designCommissionRate
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="designerAssistantCommissionRate" width="100" headerAlign="center" allowSort="false">
+            <div field="designerAssistantCommissionRate" width="50" headerAlign="center" allowSort="false">
                 designerAssistantCommissionRate
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="actualStartTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+            <div field="actualStartTime" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 actualStartTime
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="actualStartTimeFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="actualEndTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+            <div field="actualEndTime" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 actualEndTime
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="actualEndTimeFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="contractDate" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+            <div field="contractDate" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 contractDate
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="contractDateFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       format="yyyy-MM-dd"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="firstCommission" width="100" headerAlign="center" allowSort="false">
+            <div field="firstCommission" width="50" headerAlign="center" allowSort="false">
                 firstCommission
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="firstCommissionDate" width="100" headerAlign="center" allowSort="false"
+            <div field="firstCommissionDate" width="80" headerAlign="center" allowSort="false"
                  dateFormat="yyyy-MM-dd">
                 firstCommissionDate
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="firstCommissionDateFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="balanceTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
+            <div field="balanceTime" width="80" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 balanceTime
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="balanceTimeFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
-            <div field="balanceCommission" width="100" headerAlign="center" allowSort="false">
+            <div field="balanceCommission" width="50" headerAlign="center" allowSort="false">
                 balanceCommission
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
             </div>
-            <div field="balanceCommissionDate" width="100" headerAlign="center" allowSort="false"
+            <div field="balanceCommissionDate" width="80" headerAlign="center" allowSort="false"
                  dateFormat="yyyy-MM-dd">
                 balanceCommissionDate
-                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="80"/>
                 <input id="balanceCommissionDateFilter" property="filter" class="mini-datepicker" style="width:100%;"
-                       minWidth="100" onvaluechanged="onFilterChanged"/>
+                       minWidth="80" onvaluechanged="onFilterChanged"/>
             </div>
 
         </div>
     </div>
 
 </div>
+
+<!--导出Excel相关HTML-->
+<form id="excelForm" action="http://localhost:8080/ws/commission/v1/export" method="get">
+    <input type="hidden" name="designer" id="designer"/>
+    <input type="hidden" name="contractState" id="contractState"/>
+    <input type="hidden" name="commissionState" id="commissionState"/>
+    <input type="hidden" name="actualStartTime" id="actualStartTime"/>
+    <input type="hidden" name="actualEndTime" id="actualEndTime"/>
+    <input type="hidden" name="contractDate" id="contractDate"/>
+    <input type="hidden" name="firstCommissionDate" id="firstCommissionDate"/>
+    <input type="hidden" name="balanceTime" id="balanceTime"/>
+    <input type="hidden" name="balanceCommissionDate" id="balanceCommissionDate"/>
+</form>
 
 <script type="text/javascript">
 
@@ -206,6 +219,31 @@
             balanceTime: balanceTime,
             balanceCommissionDate: balanceCommissionDate
         });
+    }
+
+    function ExportExcel() {
+        var designer = mini.get("designerFilter").getValue();
+        var contractState = mini.get("contractStateFilter").getValue();
+        var commissionState = mini.get("commissionStateFilter").getValue();
+        var actualStartTime = mini.get("actualStartTimeFilter").getText();
+        var actualEndTime = mini.get("actualEndTimeFilter").getText();
+        var contractDate = mini.get("contractDateFilter").getText();
+        var firstCommissionDate = mini.get("firstCommissionDateFilter").getText();
+        var balanceTime = mini.get("balanceTimeFilter").getText();
+        var balanceCommissionDate = mini.get("balanceCommissionDateFilter").getText();
+
+        document.getElementById("designer").value = designer;
+        document.getElementById("contractState").value = contractState;
+        document.getElementById("commissionState").value = commissionState;
+        document.getElementById("actualStartTime").value = actualStartTime;
+        document.getElementById("actualEndTime").value = actualEndTime;
+        document.getElementById("contractDate").value = contractDate;
+        document.getElementById("firstCommissionDate").value = firstCommissionDate;
+        document.getElementById("balanceTime").value = balanceTime;
+        document.getElementById("balanceCommissionDate").value = balanceCommissionDate;
+        
+        var excelForm = document.getElementById("excelForm");
+        excelForm.submit();
     }
 
 </script>
