--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -193,6 +193,11 @@
 
             <div field="contractState" width="70" type="comboboxcolumn" headerAlign="center" allowSort="false">
                 状态
+                <input property="editor" readonly="true" class="mini-combobox asLabel"
+                       style="width:100%;" textField="text" valueField="value"
+                       url="http://localhost:8080/ws/commission/v1/states?type=CONTRACT"
+                       ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
+                       allowInput="true" showNullItem="true" readonly="true"/>
                 <input id="contractStateFilter" property="filter" class="mini-combobox" style="width:100%;"
                        textField="text" valueField="value"
                        url="http://localhost:8080/ws/commission/v1/states?type=CONTRACT"
