--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -5,8 +5,8 @@
 <head>
     <title>Employee</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link href="../demo.css" rel="stylesheet" type="text/css"/>
-    <script src="../../scripts/boot.js" type="text/javascript"></script>
+    <link href="../css/demo.css" rel="stylesheet" type="text/css"/>
+    <script src="../scripts/boot.js" type="text/javascript"></script>
 </head>
 <body>
 <style type="text/css">
@@ -40,52 +40,79 @@
          showFilterRow="true">
         <div property="columns">
             <div type="indexcolumn"></div>
-            <div field="name" width="120" headerAlign="center" allowSort="true">姓名
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
-                <input id="nameFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="120"
+            <div field="name" width="100" headerAlign="center" allowSort="true">姓名
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+                <input id="nameFilter" property="filter" class="mini-textbox" style="width:100%;" minWidth="100"
                        onvaluechanged="onFilterChanged"/>
                 <!--onenter="onKeyEnter"-->
+            </div>
+            <div field="companyId" width="100" type="comboboxcolumn" headerAlign="center" allowSort="false">公司
+                <input property="editor" class="mini-combobox" style="width:100%;" textField="text" valueField="value"
+                       url="http://localhost:8080/ws/employee/v1/companies"
+                       ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
+                       required="true" allowInput="true" showNullItem="false"/>
             </div>
             <div field="hiredate" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">入职日期
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="position" width="120" type="comboboxcolumn" headerAlign="center" allowSort="false">职位
-                <input property="editor" class="mini-combobox" style="width:150px;" textField="text" valueField="value"
+            <div field="position" width="100" type="comboboxcolumn" headerAlign="center" allowSort="false">职位
+                <input property="editor" class="mini-combobox" style="width:100%;" textField="text" valueField="value"
                        url="http://localhost:8080/ws/employee/v1/positions"
                        ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
                        required="true" allowInput="true" showNullItem="false"/>
             </div>
-            <div field="baseWage" width="50" allowSort="true" headerAlign="center" vtype="float"> 基本工资
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="baseWage" width="100" allowSort="true" headerAlign="center" vtype="float"> 基本工资
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="workingAgeSubsidy" width="50" headerAlign="center" allowSort="true" vtype="int">工龄
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="workingAgeSubsidy" width="100" headerAlign="center" allowSort="true" vtype="int">工龄
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="overtime" width="50" headerAlign="center" allowSort="false" vtype="float">加班
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="overtime" width="100" headerAlign="center" allowSort="false" vtype="float">加班
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="mealsSubsidy" width="50" headerAlign="center" allowSort="false" vtype="float">饭贴
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="mealsSubsidy" width="100" headerAlign="center" allowSort="false" vtype="float">饭贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="secrecySubsidy" width="50" headerAlign="center" allowSort="false" vtype="float">保密
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="secrecySubsidy" width="100" headerAlign="center" allowSort="false" vtype="float">保密
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="communicationFee" width="50" headerAlign="center" allowSort="false" vtype="float">通讯费
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="communicationFee" width="100" headerAlign="center" allowSort="false" vtype="float">通讯费
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="jywCommissionRatio" width="50" headerAlign="center" allowSort="false" vtype="float">佳园屋提成比例
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="jywCommissionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">佳园屋提成比例
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="commencementRatio" width="50" headerAlign="center" allowSort="false" vtype="float">开工比例
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="commencementRatio" width="100" headerAlign="center" allowSort="false" vtype="float">开工比例
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="completionRatio" width="50" headerAlign="center" allowSort="false" vtype="float">竣工比例
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="completionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">竣工比例
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="renovateCommossionRatio" width="50" headerAlign="center" allowSort="false" vtype="float">翻新提成比例
-                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="50"/>
+            <div field="renovateCommissionRatio" width="100" headerAlign="center" allowSort="false" vtype="float">翻新提成比例
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center" vtype="float">卡号
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="identityCardNumber" width="100" allowSort="false" headerAlign="center" vtype="float">身份证号码
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="transportationAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">交通补贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="postAllowance" width="100" allowSort="false" headerAlign="center" vtype="float">岗位津贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="leaveDate" width="100" headerAlign="center" dateFormat="yyyy-MM-dd" allowSort="true">离职日期
+                <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="storageCharge" width="100" allowSort="false" headerAlign="center" vtype="float">保管费
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="totalCharge" width="100" allowSort="false" headerAlign="center" vtype="float">总扣款
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
+            <div field="chargePerMonth" width="100" allowSort="false" headerAlign="center" vtype="float">月扣款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
         </div>
@@ -99,6 +126,17 @@
     var grid = mini.get("datagrid1");
     grid.load();
 
+    grid.on("drawcell", function (e) {
+        var record = e.record,
+            column = e.column,
+            field = e.field,
+            value = e.value;
+        if (record.leaveDate != null) {
+            if (field == "name") {
+                e.cellStyle = "color:red;font-weight:bold;";
+            }
+        }
+    })
 
     function addRow() {
         var newRow = {};
@@ -146,4 +184,4 @@
 </script>
 
 </body>
-</html>
+</html>                   
