--- a/src/main/webapp/dms/finance.html
+++ b/src/main/webapp/dms/finance.html
@@ -5,8 +5,8 @@
 <head>
     <title>Finance</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link href="../demo.css" rel="stylesheet" type="text/css"/>
-    <script src="../../scripts/boot.js" type="text/javascript"></script>
+    <link href="../css/demo.css" rel="stylesheet" type="text/css"/>
+    <script src="../scripts/boot.js" type="text/javascript"></script>
 </head>
 <body>
 <style type="text/css">
@@ -139,12 +139,9 @@
             return;
         }
 
-        alert("what's this");
-        alert("http://localhost:8080/ws/finance/v1/finances");
         var finances = grid.getChanges();
         var month = mini.get('combo1').getValue();
         var data = {'finances': finances, 'month': month};
-        alert(data)
         var json = mini.encode(data);
         alert(json);
         grid.loading("保存中，请稍后......");
