--- a/src/main/webapp/dms/projectCommission.html
+++ b/src/main/webapp/dms/projectCommission.html
@@ -5,10 +5,8 @@
 <head>
     <title>Project Commission</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link href="../demo.css" rel="stylesheet" type="text/css"/>
-    <script src="../../scripts/boot.js" type="text/javascript"></script>
-
-
+    <link href="../css/demo.css" rel="stylesheet" type="text/css"/>
+    <script src="../scripts/boot.js" type="text/javascript"></script>
 </head>
 <body>
 <style type="text/css">
